# azure-rag-chat

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  chat_chain.py  chat_history.py  create_postgresql.py  document_processor.py  localdeploy.sh  pyproject.toml  requirements.txt  run.cmd
deployment/: azuredeploy.sh
src/: azure_config.py  chat_chain.py
