[tool.poetry]
name = "modern-rag-chat"
version = "0.1.0"
description = "A Streamlit application for Modern RAG Chat with Azure OpenAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^0.84.0"
langchain_core = "^0.0.1"
langchain_community = "^0.0.1"
azure = "^0.0.1"
psycopg2 = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
