[tool.poetry]
name = "modern-rag-chat"
version = "0.1.0"
description = "A Streamlit application for Modern RAG Chat with Azure OpenAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^0.84.0"
langchain_core = "^0.0.1"
langchain_community = "^0.0.1"
azure-ai-textanalytics = "^5.1.0"
azure-identity = "^1.7.0"
azure-keyvault-secrets = "^4.2.0"
azure-storage-blob = "^12.8.0"
psycopg2 = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
